# kairos

./: .gitignore
.github/workflows/: build.yml  flutter_ci.yml  rust.yml  rust_ci.yml
app/: pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/kotlin/com/example/kairos/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: global_state.dart  global_states.dart  settings.dart  shared_prefs.dart  utils.dart
app/lib/src/api/: api_service.dart  google_sign_in_service.dart
app/lib/src/api/models/: project.dart  session.dart  user.dart
app/lib/src/pages/: auth_page.dart  focus_page.dart  login_page.dart  projects_page.dart  settings_page.dart  stats_page.dart  timeline_page.dart
app/lib/src/theme/: default_theme.dart
app/lib/src/widgets/: appbar.dart  drawer.dart  menu_button.dart
app/linux/: CMakeLists.txt
app/macos/Runner/: DebugProfile.entitlements
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/runner/: Runner.rc
server/: Cargo.toml
server/migrations/: 20200718111257_create_users_table.sql  20240906085122_create_sessions_table.sql
server/src/: lib.rs  main.rs
