[package]
name = "kairos"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kairos"

[dependencies]
actix-web = "4"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"]}
lazy_static = "1.5.0"
actix-cors = "0.7.0"
chrono = "0.4.38"

[dev-dependencies] 
reqwest = "0.11"
